Adding Database context, connection string and injecting it

--- a/src/Services/AddressBook/AddressBookAPI/appsettings.json
+++ b/src/Services/AddressBook/AddressBookAPI/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {"DefaultStr": "Server=.;Database=ABC;MultipleActiveResultSets=True;Trusted_Connection=True;"},
   "AllowedHosts": "*"
 }
