--- a/src/Services/AddressBook/AddressBookAPI/AddressBook.WebApi.csproj
+++ b/src/Services/AddressBook/AddressBookAPI/AddressBook.WebApi.csproj
@@ -1,10 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+	<ProjectReference Include="..\AddressBook.Core\AddressBook.Core.csproj" />
+	<ProjectReference Include="..\AddressBook.Infrastructure\AddressBook.Infrastructure.csproj" />
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.24" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.24">
