--- a/src/Services/AddressBook/AddressBookAPI/Properties/launchSettings.json
+++ b/src/Services/AddressBook/AddressBookAPI/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "AddressBook": {
+    "AddressBook.WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
