--- a/src/Services/AddressBook/AddressBookAPI/Properties/launchSettings.json
+++ b/src/Services/AddressBook/AddressBookAPI/Properties/launchSettings.json
@@ -1,11 +1,11 @@
-﻿{
+{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:25443",
-      "sslPort": 44337
+      "applicationUrl": "http://localhost:52302/",
+      "sslPort": 44305
     }
   },
   "profiles": {
@@ -21,10 +21,10 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
