--- a/src/Client/AngularClient/addressBook.angular.webAPI/addressBook.angular/AddressBookAngular.csproj
+++ b/src/Client/AngularClient/addressBook.angular.webAPI/addressBook.angular/AddressBookAngular.csproj
@@ -5,6 +5,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ClientApp\**" />
+    <Content Remove="ClientApp\**" />
+    <EmbeddedResource Remove="ClientApp\**" />
+    <None Remove="ClientApp\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\20221025234755_init1.cs" />
+    <Compile Remove="Migrations\20221025234755_init1.Designer.cs" />
+    <Compile Remove="Migrations\20221029181232_contacts.cs" />
+    <Compile Remove="Migrations\20221029181232_contacts.Designer.cs" />
+    <Compile Remove="Migrations\20221029181817_contactbook.cs" />
+    <Compile Remove="Migrations\20221029181817_contactbook.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+	<PackageReference Include="AutoMapper" Version="12.0.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.24" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.24" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.24">
