--- a/src/Client/AngularClient/addressBook.angular.webAPI/addressBook.angular/Properties/launchSettings.json
+++ b/src/Client/AngularClient/addressBook.angular.webAPI/addressBook.angular/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "addressBook.angular": {
+    "AddressBookAngular": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
