pagination integration in client

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/src/Client/AngularClient/addressBook.angular/.vs
+/src/Client/AngularClient/addressBook.angular.webAPI/.vs
 /src/Client/AngularClient/addressBook.angular/addressBook.angular/bin
 /src/Client/AngularClient/addressBook.angular/addressBook.angular/obj
 
